syntax = "proto3";

package chronocritters.player;

option java_package = "com.chronocritters.proto.player";
option java_outer_classname = "PlayerProto";

enum CritterTypeProto {
  CRITTER_TYPE_UNSPECIFIED = 0;
  FIRE = 1;
  WATER = 2;
  GRASS = 3;
  ELECTRIC = 4;
  METAL = 5;
}

enum AbilityTypeProto {
  ABILITY_TYPE_UNSPECIFIED = 0;
  ATTACK = 1;
  DEFENSE = 2;
  HEAL = 3;
  EFFECT = 4;
}

service PlayerService {
  rpc GetPlayer(PlayerRequest) returns (PlayerResponse);
  rpc UpdateMatchHistory(MatchHistoryRequest) returns (MatchHistoryResponse);
}

message PlayerRequest {
  string player_id = 1;
}

message PlayerResponse {
  string id = 1;
  string username = 2;
  repeated CritterProto roster = 4;
}

message PlayerStatsProto {
  int32 wins = 1;
  int32 losses = 2;
}

message CritterProto {
  string id = 1;
  string name = 2;
  CritterTypeProto type = 3;
  BaseStatsProto base_stats = 4;
  repeated AbilityProto abilities = 5;
}

message BaseStatsProto {
  int32 health = 1;
  int32 attack = 2;
  int32 defense = 3;
}

message AbilityProto {
  string id = 1;
  string name = 2;
  AbilityTypeProto type = 3;
  int32 power = 4;
}

message MatchHistoryRequest {
  string winning_player_id = 1;
  string losing_player_id = 2;
}

message MatchHistoryResponse {
  bool success = 1;
  string message = 2;
}